--- a/app/src/main/res/layout/activity_two_player_game_screen.xml
+++ b/app/src/main/res/layout/activity_two_player_game_screen.xml
@@ -219,6 +219,7 @@
                 android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Submit Guess"
+                android:textAllCaps="false"
                 android:textColor="#010101"
                 android:textSize="8pt" />
 
@@ -250,6 +251,7 @@
                 android:fontFamily="@font/lato"
                 android:gravity="center"
                 android:text="Next Round"
+                android:textAllCaps="false"
                 android:textColor="#010101"
                 android:textSize="8pt" />
         </TableRow>
